--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,35 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Page title</title>
-    <link rel="stylesheet" href="./sass/index.scss" />
-    <script type="module" src="./index.js"></script>
-  </head>
-  <body>
-    <!-- ❗️❗️❗️ Add partials like so for every page -->
-    <include src="./partials/example.html"></include>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Image Search</title>
+  <link rel="stylesheet" href="../css/main.min.css" />
+  <script type="module" src="./index.js"></script>
+</head>
+
+<body>
+  <header>
+    <form class="search__form" id="search-form">
+      <input class="search__input" class type="text" name="searchQuery" autocomplete="off"
+        placeholder="Search images..." />
+      <button class="search__btn" type="submit">
+        <svg width="inherit" height="inherit">
+          <use href="./images/symbol-defs.svg#icon-search"></use>
+        </svg>
+      </button>
+    </form>
+  </header>
+  <main>
+    <div class="gallery">
+
+    </div>
+    <div class="load-more__container">
+      <button type="button" class="load-more__btn">Load more</button>
+    </div>
+
+  </main>
+</body>
+
 </html>
